[package]
name = "threadsafe-lru"
version = "0.1.0"
edition = "2021"

authors = ["Bijan Nazem <https://github.com/bijanvan>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/bijanvan/threadsafe-lru"
documentation = "https://docs.rs/threadsafe-lru"
homepage = "https://github.com/bijanvan/threadsafe-lru"
description = """
Thread-safe LRU
"""

[lib]
name = "threadsafe_lru"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "threadsafe_lru_demo"
path = "src/bin.rs"

[dependencies]
indexlist1 = "0.1.2"
hashbrown = "0.15.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.5.5"